kubernetes/base/api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ms-basket
  labels:
    app: ms-basket
spec:
  type: ClusterIP
  ports:
    - name: "web"
      port: 80
      targetPort: 8080
  selector:
    app: ms-basket
